--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,10 +69,10 @@ jobs:
 
             mkdir storybook-static/.circleci
             touch storybook-static/.circleci/config.yml
-            echo 'ui.decentraland.org' > storybook-static/CNAME
+            echo 'ui.telesto.world' > storybook-static/CNAME
 
-            git config user.name "decentraland-bot"
-            git config user.email "developers@decentraland.org"
+            git config user.name "telestoworld-bot"
+            git config user.email "developers@telesto.world"
             ./node_modules/.bin/gh-pages --dist storybook-static
 
   release:
