--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "webpack-cli": "^3.3.2"
   },
   "dependencies": {
-    "@tcl/schemas": "^0.2.0",
+    "@tcl/schemas": "https://github.com/telestoworld/common-schemas.git",
     "balloon-css": "^0.5.0",
     "ethereum-blockies": "^0.1.1",
     "parallax-js": "^3.1.0",
